adding trio task

--- a/task1_data_analysis.ipynb
+++ b/task1_data_analysis.ipynb
@@ -348,7 +348,7 @@
         "overall_score = clf.score(X_test, Y_test)\n",
         "print(f\"Overall Accuracy: {overall_score:.3f}\")\n",
         "\n",
-        "### YOUR CODE HERE \n",
+        "### YOUR CODE STARTS HERE \n",
         "# Step 1: Split the data into two groups\n",
         "split_feature = 'SEX'\n",
         "feature_ind = list(features).index(split_feature)\n",
@@ -392,6 +392,8 @@
         "# Get scores on test data\n",
         "test_score1 = clf1.score(X1_test, Y1_test)\n",
         "test_score2 = clf2.score(X2_test, Y2_test)\n",
+        "\n",
+        "### YOUR CODE ENDS HERE ### \n",
         "\n",
         "# Calculate weighted average test score\n",
         "test_weighted_score = (test_score1 * len(X1_test) + test_score2 * len(X2_test)) / (len(X1_test) + len(X2_test))\n",
