--- a/task2_plotting.ipynb
+++ b/task2_plotting.ipynb
@@ -3558,6 +3558,7 @@
         "\n",
         "for year in range(min_year, max_year + 1):\n",
         "    plot_df = quakes.query(\"year == @year\")\n",
+        "    ### YOUR CODE STARTS HERE ### \n",
         "    frames.append(\n",
         "        go.Frame(\n",
         "            data=[go.Densitymap(\n",
@@ -3573,6 +3574,7 @@
         "            name=str(year)\n",
         "        )\n",
         "    )\n",
+        "    ### YOUR CODE ENDS HERE ### \n",
         "\n",
         "# Create base figure with first year's data\n",
         "initial_df = quakes.query(\"year == @min_year\")\n",
