adding claude generated solutions

--- a/task3_webscrapping.ipynb
+++ b/task3_webscrapping.ipynb
@@ -207,7 +207,141 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>unique</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>top</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>freq</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       Price\n",
+              "count      0\n",
+              "unique     0\n",
+              "top      NaN\n",
+              "freq     NaN"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# TASK ONLY\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "# This is the url of the website we will scrape\n",
+        "base_url = 'http://books.toscrape.com/'\n",
+        "book_inventory = {} # store you results in this dictionary here\n",
+        "\n",
+        "### YOUR CODE STARTS HERE\n",
+        "# Your task is to scrape a book website and collect the prices for all the books you find. \n",
+        "# make sure you store the results in the book_inventory dictionary with the price as a float\n",
+        "# make sure you scrape all the pages so you have 1000 books in total\n",
+        "\n",
+        "\n",
+        "### YOUR CODE ENDS HERE\n",
+        "\n",
+        "all_books_df = pd.DataFrame.from_dict(book_inventory, orient='index', columns=['Price']) # your book inventory should be a dictionary with the book title as the key and the price as the value\n",
+        "all_books_df.describe()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# CLAUDE CODE\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "# This is the url of the website we will scrape\n",
+        "base_url = 'http://books.toscrape.com/'\n",
+        "book_inventory = {} # store you results in this dictionary here\n",
+        "\n",
+        "### YOUR CODE STARTS HERE\n",
+        "# Your task is to scrape a book website and collect the prices for all the books you find. \n",
+        "# make sure you store the results in the book_inventory dictionary with the price as a float\n",
+        "# make sure you scrape all the pages so you have 1000 books in total\n",
+        "def scrape_page(url):\n",
+        "    response = requests.get(url)\n",
+        "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+        "    books = soup.find_all('article', class_='product_pod')\n",
+        "    \n",
+        "    for book in books:\n",
+        "        title = book.h3.a['title']\n",
+        "        price = float(book.select_one('p.price_color').text.strip('£'))\n",
+        "        book_inventory[title] = price\n",
+        "\n",
+        "def get_next_page(url):\n",
+        "    response = requests.get(url)\n",
+        "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+        "    next_button = soup.select_one('li.next > a')\n",
+        "    if next_button:\n",
+        "        return base_url + next_button['href']\n",
+        "    return None\n",
+        "\n",
+        "current_url = base_url + 'catalogue/page-1.html'\n",
+        "\n",
+        "while current_url and len(book_inventory) < 1000:\n",
+        "    scrape_page(current_url)\n",
+        "    current_url = get_next_page(current_url)\n",
+        "\n",
+        "### YOUR CODE ENDS HERE\n",
+        "\n",
+        "all_books_df = pd.DataFrame.from_dict(book_inventory, orient='index', columns=['Price']) # your book inventory should be a dictionary with the book title as the key and the price as the value\n",
+        "all_books_df.describe()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -218,70 +352,6 @@
             "  warnings.warn(\n"
           ]
         },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                                                    Price\n",
-            "A Light in the Attic                                51.77\n",
-            "Tipping the Velvet                                  53.74\n",
-            "Soumission                                          50.10\n",
-            "Sharp Objects                                       47.82\n",
-            "Sapiens: A Brief History of Humankind               54.23\n",
-            "...                                                   ...\n",
-            "Alice in Wonderland (Alice's Adventures in Wond...  55.53\n",
-            "Ajin: Demi-Human, Volume 1 (Ajin: Demi-Human #1)    57.06\n",
-            "A Spy's Devotion (The Regency Spies of London #1)   16.97\n",
-            "1st to Die (Women's Murder Club #1)                 53.98\n",
-            "1,000 Places to See Before You Die                  26.08\n",
-            "\n",
-            "[999 rows x 1 columns]\n"
-          ]
-        }
-      ],
-      "source": [
-        "import pandas as pd\n",
-        "\n",
-        "\n",
-        "    \n",
-        "# This is the url of the website we will scrape\n",
-        "base_url = 'http://books.toscrape.com/'\n",
-        "book_inventory = {} # store you results in this dictionary here\n",
-        "\n",
-        "### YOUR CODE STARTS HERE\n",
-        "# Your task is to scrape a book website and collect the prices for all the books you find. \n",
-        "# make sure you store the results in the book_inventory dictionary with the price as a float\n",
-        "# make sure you scrape all the pages so you have 1000 books in total\n",
-        "\n",
-        "response = requests.get(base_url)\n",
-        "soup = BeautifulSoup(response.text, 'html.parser', from_encoding='utf-8')\n",
-        "NUM_PAGES=0 \n",
-        "while True: \n",
-        "    all_books = soup.find_all('article', class_='product_pod')\n",
-        "    if len(all_books) != 20: \n",
-        "        print(all_books)\n",
-        "    for book in all_books:\n",
-        "        title = book.find('h3').find('a')['title']\n",
-        "        price = book.find('p', class_='price_color').text\n",
-        "        book_inventory[title] = float(price.split('£')[1])\n",
-        "    \n",
-        "    next_page = soup.select_one('li.next')\n",
-        "    if not next_page:\n",
-        "        break\n",
-        "    url = base_url + 'catalogue/' + next_page.find('a')['href'].split('/')[-1]\n",
-        "    response = requests.get(url)\n",
-        "    soup = BeautifulSoup(response.text, 'html.parser', from_encoding='utf-8')\n",
-        "    NUM_PAGES+=1 \n",
-        "### YOUR CODE ENDS HERE\n",
-        "\n",
-        "print(pd.DataFrame.from_dict(book_inventory, orient='index', columns=['Price'])) # your book inventory should be a dictionary with the book title as the key and the price as the value\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 59,
-      "metadata": {},
-      "outputs": [
         {
           "data": {
             "text/html": [
@@ -355,13 +425,47 @@
               "max     59.990000"
             ]
           },
-          "execution_count": 59,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "all_books_df = pd.DataFrame.from_dict(book_inventory, orient='index', columns=['Price'])\n",
+        "# MY CODE\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "# This is the url of the website we will scrape\n",
+        "base_url = 'http://books.toscrape.com/'\n",
+        "book_inventory = {} # store you results in this dictionary here\n",
+        "\n",
+        "### YOUR CODE STARTS HERE\n",
+        "# Your task is to scrape a book website and collect the prices for all the books you find. \n",
+        "# make sure you store the results in the book_inventory dictionary with the price as a float\n",
+        "# make sure you scrape all the pages so you have 1000 books in total\n",
+        "\n",
+        "response = requests.get(base_url)\n",
+        "soup = BeautifulSoup(response.text, 'html.parser', from_encoding='utf-8')\n",
+        "NUM_PAGES=0 \n",
+        "while True: \n",
+        "    all_books = soup.find_all('article', class_='product_pod')\n",
+        "    if len(all_books) != 20: \n",
+        "        print(all_books)\n",
+        "    for book in all_books:\n",
+        "        title = book.find('h3').find('a')['title']\n",
+        "        price = book.find('p', class_='price_color').text\n",
+        "        book_inventory[title] = float(price.split('£')[1])\n",
+        "    \n",
+        "    next_page = soup.select_one('li.next')\n",
+        "    if not next_page:\n",
+        "        break\n",
+        "    url = base_url + 'catalogue/' + next_page.find('a')['href'].split('/')[-1]\n",
+        "    response = requests.get(url)\n",
+        "    soup = BeautifulSoup(response.text, 'html.parser', from_encoding='utf-8')\n",
+        "    NUM_PAGES+=1 \n",
+        "### YOUR CODE ENDS HERE\n",
+        "\n",
+        "all_books_df = pd.DataFrame.from_dict(book_inventory, orient='index', columns=['Price']) # your book inventory should be a dictionary with the book title as the key and the price as the value\n",
         "all_books_df.describe()"
       ]
     }
