--- a/task4_async_trio.ipynb
+++ b/task4_async_trio.ipynb
@@ -186,6 +186,143 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "## TASK ONLY\n",
+        "import trio\n",
+        "import httpx\n",
+        "import os\n",
+        "import time\n",
+        "from urllib.parse import urlparse\n",
+        "\n",
+        "# List of files to download\n",
+        "FILES_TO_DOWNLOAD = {\n",
+        "    \"War and Peace\": \"https://www.gutenberg.org/files/2600/2600-0.txt\",\n",
+        "    \"Pride and Prejudice\": \"https://www.gutenberg.org/cache/epub/1342/pg1342.txt\",\n",
+        "    \"The Adventures of Sherlock Holmes\": \"https://www.gutenberg.org/files/1661/1661-0.txt\",\n",
+        "}\n",
+        "\n",
+        "# configuration\n",
+        "GLOBAL_TIMEOUT_SECONDS = 60\n",
+        "DOWNLOAD_DIR = \"downloads\"\n",
+        "CHUNK_SIZE = 4096  # 4KB chunks\n",
+        "os.makedirs(DOWNLOAD_DIR, exist_ok=True)\n",
+        "\n",
+        "async def download_file(url, client, name, download_dir):\n",
+        "    \"\"\"Download a file and track progress.\"\"\"\n",
+        "    ### YOUR CODE STARTS HERE\n",
+        "\n",
+        "    ### YOUR CODE ENDS HERE\n",
+        "    print(f\"Downloaded {name} from {url}\")\n",
+        "    print(response.content[:100])\n",
+        "\n",
+        "\n",
+        "async def main():\n",
+        "    \"\"\"Main function that orchestrates the downloads.\"\"\"\n",
+        "    async with httpx.AsyncClient() as client:\n",
+        "        ### YOUR CODE STARTS HERE\n",
+        "        pass \n",
+        "        ### YOUR CODE ENDS HERE\n",
+        "\n",
+        "start_time = time.time()\n",
+        "trio.run(main)\n",
+        "end_time = time.time()\n",
+        "print(f\"Total time taken: {end_time - start_time} seconds\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Downloading Pride and Prejudice: 100.00%olmes: 72.82%\n",
+            "Downloaded Pride and Prejudice from https://www.gutenberg.org/cache/epub/1342/pg1342.txt\n",
+            "﻿The Project Gutenberg eBook of Pride and Prejudice\n",
+            "    \n",
+            "This ebook is for the use of anyone anywher\n",
+            "Downloading The Adventures of Sherlock Holmes: 100.00%\n",
+            "Downloaded The Adventures of Sherlock Holmes from https://www.gutenberg.org/files/1661/1661-0.txt\n",
+            "﻿The Project Gutenberg eBook of The Adventures of Sherlock Holmes,\n",
+            "by Arthur Conan Doyle\n",
+            "\n",
+            "This eBook\n",
+            "Downloading War and Peace: 100.00%\n",
+            "Downloaded War and Peace from https://www.gutenberg.org/files/2600/2600-0.txt\n",
+            "﻿The Project Gutenberg eBook of War and Peace, by Leo Tolstoy\n",
+            "\n",
+            "This eBook is for the use of anyone a\n",
+            "Total time taken: 1.5366590023040771 seconds\n"
+          ]
+        }
+      ],
+      "source": [
+        "# CLAUDE ANSWER more complicated than my own answer\n",
+        "import trio\n",
+        "import httpx\n",
+        "import os\n",
+        "import time\n",
+        "from urllib.parse import urlparse\n",
+        "\n",
+        "# List of files to download\n",
+        "import trio\n",
+        "import httpx\n",
+        "import os\n",
+        "import time\n",
+        "from urllib.parse import urlparse\n",
+        "\n",
+        "# List of files to download\n",
+        "FILES_TO_DOWNLOAD = {\n",
+        "    \"War and Peace\": \"https://www.gutenberg.org/files/2600/2600-0.txt\",\n",
+        "    \"Pride and Prejudice\": \"https://www.gutenberg.org/cache/epub/1342/pg1342.txt\",\n",
+        "    \"The Adventures of Sherlock Holmes\": \"https://www.gutenberg.org/files/1661/1661-0.txt\",\n",
+        "}\n",
+        "\n",
+        "# configuration\n",
+        "GLOBAL_TIMEOUT_SECONDS = 60\n",
+        "DOWNLOAD_DIR = \"downloads\"\n",
+        "CHUNK_SIZE = 4096  # 4KB chunks\n",
+        "os.makedirs(DOWNLOAD_DIR, exist_ok=True)\n",
+        "\n",
+        "async def download_file(url, client, name, download_dir):\n",
+        "    \"\"\"Download a file and track progress.\"\"\"\n",
+        "    file_path = os.path.join(download_dir, f\"{name}.txt\")\n",
+        "    \n",
+        "    async with client.stream('GET', url) as response:\n",
+        "        total_size = int(response.headers.get('content-length', 0))\n",
+        "        bytes_downloaded = 0\n",
+        "        \n",
+        "        with open(file_path, 'wb') as f:\n",
+        "            async for chunk in response.aiter_bytes(chunk_size=CHUNK_SIZE):\n",
+        "                f.write(chunk)\n",
+        "                bytes_downloaded += len(chunk)\n",
+        "                progress = (bytes_downloaded / total_size) * 100 if total_size > 0 else 0\n",
+        "                print(f\"\\rDownloading {name}: {progress:.2f}%\", end=\"\", flush=True)\n",
+        "    \n",
+        "    print(f\"\\nDownloaded {name} from {url}\")\n",
+        "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+        "        print(f.read(100))\n",
+        "\n",
+        "async def main():\n",
+        "    \"\"\"Main function that orchestrates the downloads.\"\"\"\n",
+        "    async with httpx.AsyncClient() as client:\n",
+        "        async with trio.open_nursery() as nursery:\n",
+        "            for name, url in FILES_TO_DOWNLOAD.items():\n",
+        "                nursery.start_soon(download_file, url, client, name, DOWNLOAD_DIR)\n",
+        "\n",
+        "start_time = time.time()\n",
+        "trio.run(main)\n",
+        "end_time = time.time()\n",
+        "print(f\"Total time taken: {end_time - start_time} seconds\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 22,
       "metadata": {},
       "outputs": [
@@ -207,6 +344,7 @@
         }
       ],
       "source": [
+        "# MY ANSWER\n",
         "import trio\n",
         "import httpx\n",
         "import os\n",
@@ -252,6 +390,13 @@
         "end_time = time.time()\n",
         "print(f\"Total time taken: {end_time - start_time} seconds\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
