adding claude responses

--- a/task2_plotting.ipynb
+++ b/task2_plotting.ipynb
@@ -925,6 +925,134 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# TASK ONLY \n",
+        "import plotly.graph_objects as go\n",
+        "# Create frames for each year\n",
+        "frames = []\n",
+        "min_year = quakes['year'].min()\n",
+        "max_year = quakes['year'].max()\n",
+        "\n",
+        "for year in range(min_year, max_year + 1):\n",
+        "    plot_df = quakes.query(\"year == @year\")\n",
+        "    ### YOUR CODE STARTS HERE ### \n",
+        "    \n",
+        "    ### YOUR CODE ENDS HERE ### \n",
+        "\n",
+        "# Create base figure with first year's data\n",
+        "initial_df = quakes.query(\"year == @min_year\")\n",
+        "fig = go.Figure(\n",
+        "    data=[go.Densitymap(\n",
+        "        lat=initial_df.Latitude,\n",
+        "        lon=initial_df.Longitude,\n",
+        "        z=initial_df.Magnitude,\n",
+        "        radius=10\n",
+        "    )],\n",
+        "    frames=frames\n",
+        ")\n",
+        "\n",
+        "# Add slider and play button\n",
+        "fig.update_layout(\n",
+        "    updatemenus=[{\n",
+        "        'type': 'buttons',\n",
+        "        'showactive': False,\n",
+        "        'buttons': [{\n",
+        "            'label': 'Play',\n",
+        "            'method': 'animate',\n",
+        "            'args': [None, {'frame': {'duration': 500, 'redraw': True}, 'fromcurrent': True}]\n",
+        "        }]\n",
+        "    }],\n",
+        "    sliders=[{\n",
+        "        'currentvalue': {'prefix': 'Year: '},\n",
+        "        'steps': [{'args': [[str(year)]], 'label': str(year), 'method': 'animate'} \n",
+        "                 for year in range(min_year, max_year + 1)]\n",
+        "    }]\n",
+        ")\n",
+        "\n",
+        "# Update layout\n",
+        "fig.update_layout(\n",
+        "    map_style=\"open-street-map\",\n",
+        "    map_center_lon=180,\n",
+        "    margin={\"r\":0,\"t\":30,\"l\":10,\"b\":20}  # Adjusted margins to accommodate controls\n",
+        ")\n",
+        "\n",
+        "fig.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Claude Code completion - same as my solution\n",
+        "# TASK ONLY \n",
+        "import plotly.graph_objects as go\n",
+        "# Create frames for each year\n",
+        "frames = []\n",
+        "min_year = quakes['year'].min()\n",
+        "max_year = quakes['year'].max()\n",
+        "\n",
+        "for year in range(min_year, max_year + 1):\n",
+        "    plot_df = quakes.query(\"year == @year\")\n",
+        "    ### YOUR CODE STARTS HERE ### \n",
+        "    frame = go.Frame(\n",
+        "    data=[go.Densitymap(\n",
+        "        lat=plot_df.Latitude,\n",
+        "        lon=plot_df.Longitude,\n",
+        "        z=plot_df.Magnitude,\n",
+        "        radius=10\n",
+        "    )],\n",
+        "    name=str(year)\n",
+        "    )\n",
+        "    frames.append(frame)\n",
+        "    ### YOUR CODE ENDS HERE ### \n",
+        "\n",
+        "# Create base figure with first year's data\n",
+        "initial_df = quakes.query(\"year == @min_year\")\n",
+        "fig = go.Figure(\n",
+        "    data=[go.Densitymap(\n",
+        "        lat=initial_df.Latitude,\n",
+        "        lon=initial_df.Longitude,\n",
+        "        z=initial_df.Magnitude,\n",
+        "        radius=10\n",
+        "    )],\n",
+        "    frames=frames\n",
+        ")\n",
+        "\n",
+        "# Add slider and play button\n",
+        "fig.update_layout(\n",
+        "    updatemenus=[{\n",
+        "        'type': 'buttons',\n",
+        "        'showactive': False,\n",
+        "        'buttons': [{\n",
+        "            'label': 'Play',\n",
+        "            'method': 'animate',\n",
+        "            'args': [None, {'frame': {'duration': 500, 'redraw': True}, 'fromcurrent': True}]\n",
+        "        }]\n",
+        "    }],\n",
+        "    sliders=[{\n",
+        "        'currentvalue': {'prefix': 'Year: '},\n",
+        "        'steps': [{'args': [[str(year)]], 'label': str(year), 'method': 'animate'} \n",
+        "                 for year in range(min_year, max_year + 1)]\n",
+        "    }]\n",
+        ")\n",
+        "\n",
+        "# Update layout\n",
+        "fig.update_layout(\n",
+        "    map_style=\"open-street-map\",\n",
+        "    map_center_lon=180,\n",
+        "    margin={\"r\":0,\"t\":30,\"l\":10,\"b\":20}  # Adjusted margins to accommodate controls\n",
+        ")\n",
+        "\n",
+        "fig.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 70,
       "metadata": {},
       "outputs": [
