updating reading questions

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -13,6 +13,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Q4: Given this code snippet, what would be the order of what is printed?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Main\n",
+      "Start\n",
+      "Middle\n",
+      "End\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def example(): \n",
+    "    print(\"Start\")\n",
+    "    await trio.sleep(1)\n",
+    "    print(\"Middle\")\n",
+    "    await trio.sleep(1)\n",
+    "    print(\"End\")\n",
+    "\n",
+    "async def main(): \n",
+    "    async with trio.open_nursery() as nursery: \n",
+    "        nursery.start_soon(example)\n",
+    "        print(\"Main\")\n",
+    "\n",
+    "trio.run(main)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trace the execution flow of this code and identify when each task runs and completes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def task_with_subtasks():\n",
+    "    print(\"Parent: starting\")\n",
+    "    async with trio.open_nursery() as subtask_nursery:\n",
+    "        subtask_nursery.start_soon(subtask, 1)\n",
+    "        print(\"Parent: spawned first subtask\")\n",
+    "        await trio.sleep(0.5)\n",
+    "        subtask_nursery.start_soon(subtask, 2)\n",
+    "        print(\"Parent: spawned second subtask\")\n",
+    "    print(\"Parent: subtasks complete\")\n",
+    "\n",
+    "async def subtask(number):\n",
+    "    print(f\"Subtask {number}: starting\")\n",
+    "    await trio.sleep(1)\n",
+    "    print(f\"Subtask {number}: finished\")\n",
+    "\n",
+    "trio.run(task_with_subtasks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What will this code output and why? Pay attention to the behavior of the Semaphore:"
    ]
   },
@@ -151,6 +221,22 @@
     "    print(f\"Final counter value: {shared_counter}\")\n",
     "\n",
     "trio.run(main)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Review the following code snippet and identify the bug: \n",
+    "async def process_data(items):\n",
+    "    results = []\n",
+    "    async with trio.open_nursery() as nursery:\n",
+    "        for item in items:\n",
+    "            result = await process_item(item)\n",
+    "            results.append(result)\n",
+    "    return results"
    ]
   }
  ],
