updating debugging questions

--- a/final_task/post-survey.ipynb
+++ b/final_task/post-survey.ipynb
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Review the following code snippet and identify the bug: \n",
+    "# Review the following code snippet and identify the bug -> does not execute async bc of the await\n",
     "async def process_data(items):\n",
     "    results = []\n",
     "    async with trio.open_nursery() as nursery:\n",
@@ -238,6 +238,216 @@
     "            results.append(result)\n",
     "    return results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Review the code and describe the bug: -> task never completes because of timeout function\n",
+    "async def run_with_timeout():\n",
+    "    with trio.move_on_after(1):\n",
+    "        await long_running_task()\n",
+    "\n",
+    "async def long_running_task():\n",
+    "    await trio.sleep(2)\n",
+    "    print(\"Task completed\")\n",
+    "\n",
+    "trio.run(run_with_timeout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What's the problem with this code? -> client is created each time and never closed\n",
+    "async def fetch_data_repeatedly():\n",
+    "    while True:\n",
+    "        client = httpx.AsyncClient()\n",
+    "        try:\n",
+    "            response = await client.get(\"https://api.example.com/status\")\n",
+    "            if response.status_code == 200:\n",
+    "                print(\"Service is up!\")\n",
+    "            else:\n",
+    "                print(f\"Service returned: {response.status_code}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error occurred: {e}\")\n",
+    "        \n",
+    "        await trio.sleep(60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: <coroutine object fetch_data at 0x10eca7e80>,\n",
+       " 2: <coroutine object fetch_data at 0x10eca7b80>,\n",
+       " 3: <coroutine object fetch_data at 0x10eca7c40>}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what is wrong with this code? where is the await missing? \n",
+    "async def fetch_data(user_id):\n",
+    "    await trio.sleep(1)\n",
+    "    return {'id': user_id, 'data': f'User data for {user_id}'}\n",
+    "\n",
+    "async def process_users(user_ids):\n",
+    "    all_data = {}\n",
+    "    \n",
+    "    async def process_one_user(uid):\n",
+    "        data = fetch_data(uid) \n",
+    "        all_data[uid] = data\n",
+    "    \n",
+    "    async with trio.open_nursery() as nursery:\n",
+    "        for uid in user_ids:\n",
+    "            nursery.start_soon(process_one_user, uid)\n",
+    "    \n",
+    "    return all_data\n",
+    "\n",
+    "trio.run(process_users, [1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NurseryManager' object has no attribute 'start_soon'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     14\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m trio.sleep(\u001b[32m1\u001b[39m)\n\u001b[32m     15\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mResults: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresults\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)  \u001b[38;5;66;03m# Expect to see status='completed'\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[43mtrio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmain\u001b[49m\u001b[43m)\u001b[49m\n",
+      "    \u001b[31m[... skipping hidden 1 frame]\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      8\u001b[39m results = {}\n\u001b[32m     10\u001b[39m nursery = trio.open_nursery()\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[43mnursery\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstart_soon\u001b[49m(process_task, results)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# Do some other work\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m trio.sleep(\u001b[32m1\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'NurseryManager' object has no attribute 'start_soon'"
+     ]
+    }
+   ],
+   "source": [
+    "# what is wrong with this code? # nursery not properly open \n",
+    "\n",
+    "async def process_task(result_dict):\n",
+    "    await trio.sleep(2)\n",
+    "    result_dict['status'] = 'completed'\n",
+    "\n",
+    "async def main():\n",
+    "    results = {}\n",
+    "    \n",
+    "    nursery = trio.open_nursery()\n",
+    "    nursery.start_soon(process_task, results)\n",
+    "    \n",
+    "    # Do some other work\n",
+    "    await trio.sleep(1)\n",
+    "    print(f\"Results: {results}\")  # Expect to see status='completed'\n",
+    "\n",
+    "trio.run(main)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation Question:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A \n",
+    "import trio\n",
+    "\n",
+    "async def say_hello():\n",
+    "    await trio.sleep(1)\n",
+    "    print(\"Hello\")\n",
+    "\n",
+    "async def say_world():\n",
+    "    await trio.sleep(2)\n",
+    "    print(\"World\")\n",
+    "\n",
+    "async def main():\n",
+    "    await say_hello()\n",
+    "    await say_world()\n",
+    "\n",
+    "trio.run(main)\n",
+    "\n",
+    "# B\n",
+    "\n",
+    "import trio\n",
+    "\n",
+    "async def say_hello():\n",
+    "    await trio.sleep(1)\n",
+    "    print(\"Hello\")\n",
+    "\n",
+    "async def say_world():\n",
+    "    await trio.sleep(2)\n",
+    "    print(\"World\")\n",
+    "\n",
+    "async def main():\n",
+    "    async with trio.open_nursery() as nursery:\n",
+    "        nursery.start_soon(say_hello)\n",
+    "        nursery.start_soon(say_world)\n",
+    "\n",
+    "trio.run(main)\n",
+    "\n",
+    "# C\n",
+    "import trio\n",
+    "\n",
+    "def say_hello():\n",
+    "    trio.sleep(1)\n",
+    "    print(\"Hello\")\n",
+    "\n",
+    "def say_world():\n",
+    "    trio.sleep(2)\n",
+    "    print(\"World\")\n",
+    "\n",
+    "async def main():\n",
+    "    async with trio.open_nursery() as nursery:\n",
+    "        nursery.start_soon(say_hello)\n",
+    "        nursery.start_soon(say_world)\n",
+    "\n",
+    "trio.run(main)\n",
+    "\n",
+    "# D\n",
+    "import trio\n",
+    "\n",
+    "async def say_hello():\n",
+    "    await trio.sleep(1)\n",
+    "    print(\"Hello\")\n",
+    "\n",
+    "async def say_world():\n",
+    "    await trio.sleep(2)\n",
+    "    print(\"World\")\n",
+    "\n",
+    "def main():\n",
+    "    nursery = trio.open_nursery()\n",
+    "    nursery.start_soon(say_hello)\n",
+    "    nursery.start_soon(say_world)\n",
+    "\n",
+    "trio.run(main)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
